Fix emoji coverflow card size: explicit 8em dimensions, 52px font

--- a/css/styles.css
+++ b/css/styles.css
@@ -885,9 +885,11 @@ a {
 }
 
 .coverflow-artwork:not(img) {
-  font-size: 4em;
   top: 0;
   left: 0;
+  width: 8em;
+  height: 8em;
+  font-size: 52px;
 }
 
 .coverflow-info {
